plugins {
	id 'java-library'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'maven-publish'
}

group = 'com.tapajos.baas'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	api 'org.springframework.kafka:spring-kafka'
	api 'com.fasterxml.jackson.core:jackson-databind'
	api 'org.springframework.boot:spring-boot-autoconfigure'
	api 'org.slf4j:slf4j-api'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-Dnet.bytebuddy.experimental=true")
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
			versionMapping {
				usage('java-api') {
					fromResolutionOf('runtimeClasspath')
				}
				usage('java-runtime') {
					fromResolutionResult()
				}
			}
		}
	}
}

bootJar {
	enabled = false
}

jar {
	enabled = true
}
